--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -2,8 +2,8 @@
 
   <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6 text-center">
-      <h5 *ngIf="gender === 'men'">Rangliste Gesamt</h5>
-      <h5 *ngIf="gender === 'women'">Rangliste Damen</h5>
+      <h5 class="myHeader" *ngIf="gender === 'men'">Rangliste Gesamt</h5>
+      <h5 class="myHeader" *ngIf="gender === 'women'">Rangliste Damen</h5>
     </div>
   </div>
 
@@ -23,7 +23,7 @@
   <div class="row justify-content-center py-2">
 
     <div *ngIf="!(players|async)?.length">
-      <h5>Lade Spielerdaten...</h5>
+      <h5 class="myHeader">Lade Spielerdaten...</h5>
     </div>
 
     <div class="col-md-8 col-lg-6" *ngIf="(players|async)?.length">
@@ -32,9 +32,9 @@
           <table class="table table-striped table-sm text-center">
             <thead>
               <tr>
-                <th>Rang</th>
-                <th>Name</th>
-                <th>anstehende Forderung</th>
+                <th class="myHeader">Rang</th>
+                <th class="myHeader">Name</th>
+                <th class="myHeader">anstehende Forderung</th>
               </tr>
             </thead>
             <tbody>
@@ -48,7 +48,7 @@
                 </th>
                 <td>{{ player.firstName }} {{ player.lastName }}</td>
                 <td>
-                  <i *ngIf="player.challenged === false" class="fa fa-times text-muted" aria-hidden="true"></i>
+                  <!-- <i *ngIf="player.challenged === false" class="fa fa-times text-muted" aria-hidden="true"></i> -->
                   <div *ngIf="player.challenged === true" class="font-italic text-muted">
                     {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
                   </div>
