Change style of home-component.
Make logo to background-image.

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -16,12 +16,12 @@
       <div class="tab-content">
 
         <div class="tab-pane text-center active fade in show" id="home">
-          <h5>Badminton-Vereinsrangliste</h5>
-          <img src="../../assets/images/rww-logo.png" class="img-fluid" alt="RW-Logo">
-          <div class="alert">
+          <h3 class="heading">Badminton-Vereinsrangliste</h3>
+          <!-- <img src="../../assets/images/rww-logo.png" class="img-fluid" alt="RW-Logo"> -->
+          <!-- <div class="alert">
             <a class="btn btn-danger" routerLink="/signup">Registrieren</a>
-          </div>
-          <div class="alert alert-warning text-left">
+          </div> -->
+          <div class="alert text-left message">
             Diese Rangliste hat
             <span class="font-weight-bold">keine Auswirkung</span> auf die Besetzung der Mannschaften!
             <hr> Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht
