Style home-component.
Play around with home-component's CSS and markup.
Still needs more improvement.

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -16,16 +16,14 @@
       <div class="tab-content">
 
         <div class="tab-pane text-center active fade in show" id="home">
-          <h3 class="heading">Badminton-Vereinsrangliste</h3>
-          <!-- <img src="../../assets/images/rww-logo.png" class="img-fluid" alt="RW-Logo"> -->
-          <!-- <div class="alert">
-            <a class="btn btn-danger" routerLink="/signup">Registrieren</a>
-          </div> -->
-          <div class="alert text-left message">
-            Diese Rangliste hat
-            <span class="font-weight-bold">keine Auswirkung</span> auf die Besetzung der Mannschaften!
-            <hr> Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht
-            jedoch für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
+          <div class="home-background">
+            <div class="home-heading">Badminton Rangliste</div>
+            <div class="home-content">
+              Diese Rangliste hat
+              <span class="font-weight-bold">keine Auswirkung</span> auf die Besetzung der Mannschaften!
+              <br>Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht
+              jedoch für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
+            </div>
           </div>
         </div>
 
