--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -2,13 +2,6 @@
   margin-bottom: 20px;
 }
 
-.container {
-  background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url("/assets/images/rww-logo.png");
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
-
 .h-link {
   background: limegreen;
 }
@@ -17,8 +10,32 @@ a {
   text-decoration: none;
 }
 
-.message {
-  color: white;
-  background: #0064D0;
+.home-background {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 60vh;
+  background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url("/assets/images/rww-logo.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.home-heading {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3));
+  padding: 0.5em;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.home-content {
+  font-size: 1.25em;
+  background: linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4));
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  padding: 0.5em;
 }
