--- a/src/app/challenge/challenge/opponent-detail/opponent-detail.component.html
+++ b/src/app/challenge/challenge/opponent-detail/opponent-detail.component.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div *ngIf="opponent.challenged === true">
-        <div class="card-body">
+        <div class="card-body" style="max-width: 400px;">
           {{ opponent.firstName }} hat sein aktuelles Ranglistenspiel noch nicht absolviert. Dieser Spieler kann zur Zeit nicht gefordert
           werden.
         </div>
