--- a/src/app/challenge/active-challenges/active-challenges.component.html
+++ b/src/app/challenge/active-challenges/active-challenges.component.html
@@ -1,9 +1,4 @@
 <div class="container py-3">
-  <div class="row justify-content-center">
-
-
-
-  </div>
 
   <div class="row justify-content-center">
 
@@ -43,7 +38,7 @@
         <!-- Completed challenges -->
         <div class="tab-pane fade" id="completed" role="tabpanel">
           <ul class="list-group" *ngIf="(completedChallenges|async)?.length; else emptyCompletedChallengesTemplate">
-            <li *ngFor="let completed of completedChallenges | async" class="list-group-item text-center mb-2 border-0">
+            <li *ngFor="let completed of completedChallenges | async" class="list-group-item text-center mb-1 p-0 border-1 border-dark">
               <div class="card text-center">
                 <div class="card-header">
                   <span class="font-weight-bold">
