--- a/src/app/challenge/challenge/challenge.component.html
+++ b/src/app/challenge/challenge/challenge.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-auto">
 
-      <div class="card border-dark" style="width: 20rem;">
+      <div class="card border-dark">
         <div class="card-header" *ngIf="playerObject.rank !== 999">
           <div *ngIf="playerObject.rank !== 9999">
             <h6 class="card-title mb-0 text-center">
