--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,89 +1,88 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand-md bg-dark">
 
-  <!-- Brand -->
-  <a class="navbar-brand" routerLink="">
-    <!-- <img src="../../../assets/images/rww-logo.png" alt="Rot Weiß Walldorf Logo" class="d-inline-block" width="40px" height="40px"> -->
-    <button class="btn btn-outline-danger">
-      <i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>
+    <!-- Brand -->
+    <a class="navbar-brand" routerLink="">
+      <button class="btn btn-danger">
+        <i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>
+      </button>
+    </a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-  </a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <!-- Links -->
+    <div class="collapse navbar-collapse" id="nav-content">
 
-  <!-- Links -->
-  <div class="collapse navbar-collapse" id="nav-content">
-
-    <ul class="navbar-nav mr-auto mt-lg-0">
-      <!-- Ranking-Link -->
-      <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['ranking', 'men']">
-          <button class="btn btn-outline-danger myHeader">
-            Ranglisten
-          </button>
-        </a>
-      </li>
-
-      <!-- Challenge-Link -->
-      <li class="nav-item">
-        <a class="nav-link" routerLink="active-challenges">
-          <button class="btn btn-outline-danger myHeader">
-            Forderungen
-          </button>
-        </a>
-      </li>
-    </ul>
-
-    <ul class="navbar-nav ml-auto">
-
-      <!-- Only visible if player is logged in. -->
-      <li class="nav-item" *ngIf="getAuthState() | async; let user; else showLogin">
-        <div class="nav-link btn-group">
-          <button class="btn btn-primary myHeader" type="button" routerLink="signin/edit" style="color: white; cursor: pointer">
-            <i class="fa fa-user fa-fw" style="color: white; cursor: pointer;"></i> {{ user.displayName }}
-          </button>
-          <button class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" style="cursor: pointer;">
-          </button>
-          <ul class="dropdown-menu dropdown-menu-right">
-            <li>
-              <a class="dropdown-item" style="cursor: pointer;" routerLink="/signin/edit">
-                <i class="fa fa-user fa-fw" aria-hidden="true"></i>Persönlicher Bereich</a>
-            </li>
-            <li>
-              <a class="dropdown-item" (click)="onLogout()" style="cursor: pointer;">
-                <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>Logout</a>
-            </li>
-          </ul>
-        </div>
-      </li>
-
-      <!-- Only visible as guest. -->
-      <ng-template #showLogin>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="signin">
-            <button class="btn btn-primary myHeader" style="cursor: pointer">
-              <i class="fa fa-sign-in"></i> Anmelden</button>
+      <ul class="navbar-nav mr-auto mt-lg-0">
+        <!-- Ranking-Link -->
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['ranking', 'men']">
+            <button class="btn btn-danger">
+              Ranglisten
+            </button>
           </a>
         </li>
-      </ng-template>
 
-      <li class="nav-item">
-        <div class="nav-link">
+        <!-- Challenge-Link -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="active-challenges">
+            <button class="btn btn-danger">
+              Forderungen
+            </button>
+          </a>
+        </li>
+      </ul>
 
-          <button class="btn btn-outline-danger" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-cog fa-fw fa-lg" aria-hidden="true"></i>
-          </button>
+      <ul class="navbar-nav ml-auto">
 
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="SignIn">
-            <a class="dropdown-item" routerLink="signup">
-              <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Registrieren
-            </a>
+        <!-- Only visible if player is logged in. -->
+        <li class="nav-item" *ngIf="getAuthState() | async; let user; else showLogin">
+          <div class="nav-link btn-group">
+            <button class="btn btn-primary" type="button" routerLink="signin/edit" style="color: white; cursor: pointer">
+              <i class="fa fa-user fa-fw" style="color: white; cursor: pointer;"></i> {{ user.displayName }}
+            </button>
+            <button class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false" style="cursor: pointer;">
+            </button>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li>
+                <a class="dropdown-item" style="cursor: pointer;" routerLink="/signin/edit">
+                  <i class="fa fa-user fa-fw" aria-hidden="true"></i>Persönlicher Bereich</a>
+              </li>
+              <li>
+                <a class="dropdown-item" (click)="onLogout()" style="cursor: pointer;">
+                  <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>Logout</a>
+              </li>
+            </ul>
           </div>
-        </div>
-      </li>
-    </ul>
-  </div>
+        </li>
+
+        <!-- Only visible as guest. -->
+        <ng-template #showLogin>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="signin">
+              <button class="btn btn-danger">
+                <i class="fa fa-sign-in"></i> Anmelden</button>
+            </a>
+          </li>
+        </ng-template>
+
+        <li class="nav-item">
+          <div class="nav-link">
+
+            <button class="btn btn-danger" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-cog fa-fw fa-lg" aria-hidden="true"></i>
+            </button>
+
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="SignIn">
+              <a class="dropdown-item" routerLink="signup">
+                <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Registrieren
+              </a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
 </nav>
