--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -16,16 +16,24 @@ a {
   justify-content: center;
   align-items: center;
   height: 60vh;
-  background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url("/assets/images/rww-logo.png");
-  background-size: cover;
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url('/assets/images/rww-logo.png');
+  background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .home-heading {
   margin-bottom: 2rem;
   font-size: 1.5rem;
   font-weight: bold;
-  background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3));
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.3),
+    rgba(255, 255, 255, 0.3)
+  );
   padding: 0.5em;
   border: 1px solid lightgrey;
   border-radius: 5px;
@@ -34,7 +42,10 @@ a {
 
 .home-content {
   font-size: 1.25em;
-  background: linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4));
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.4)
+  );
   border: 1px solid lightgrey;
   border-radius: 5px;
   padding: 0.5em;
