--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -28,14 +28,19 @@
         </div>
 
         <div class="tab-pane fade" id="rules">
-          <h5>Regeln</h5>
+          <h4 class="text-center">Regeln</h4>
           <br>
           <p>
             Das Ranglistensystem entspricht einem Tannenbaum und teilt die Ranglistenspieler/-innen in verschiedene Reihen ein. In Reihe
             1 steht die Nummer 1, in Reihe 2 die Nummer 2 und Nummer 3, in Reihe 3 die Nummer 4, 5 und 6, in Reihe 4 die
             Nummer 7, 8, 9 und 10, usw.... (siehe Bild unten).
           </p>
-          <img src="../../assets/images/pyramid.png" alt="Tannenbaum" class="img-fluid">
+          <figure>
+            <div class="text-center">
+              <img src="../../assets/images/pyr.png" alt="Tannenbaum" class="img-fluid">
+            </div>
+            <figcaption class="figure-caption text-center">Spieler 5 darf in seiner eigenen Reihe Spieler 4 fordern, und in der Reihe über ihm darf er Spieler 3 fordern.</figcaption>
+          </figure>
           <br>
           <br>
           <p>
