--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,17 +1,17 @@
 <div class="container py-3">
 
-  <div class="row justify-content-center">
+  <!-- <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6 text-center">
       <h5 class="myHeader" *ngIf="gender === 'men'">Rangliste Gesamt</h5>
       <h5 class="myHeader" *ngIf="gender === 'women'">Rangliste Damen</h5>
     </div>
-  </div>
+  </div> -->
 
-  <div class="row justify-content-center py-3">
+  <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6">
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a href="#table" class="nav-link active" data-toggle="tab" (click)="onChangeToMale()">Gesamt</a>
+          <a href="#table" class="nav-link active bg-success" data-toggle="tab" (click)="onChangeToMale()">Gesamt</a>
         </li>
         <li class="nav-item">
           <a href="#table" class="nav-link" data-toggle="tab" (click)="onChangeToFemale()">Damen</a>
@@ -29,12 +29,18 @@
     <div class="col-md-8 col-lg-6" *ngIf="(players|async)?.length">
       <div class="tab-content">
         <div class="tab-pane active fade in show" id="table">
-          <table class="table table-striped table-sm text-center">
-            <thead>
+          <table class="table table-striped table-dark text-center table-bordered table-hover">
+            <caption>
+              <ul>
+                <li>OR (Ohne Rang): Spieler ist freigeschaltet.</li>
+                <li>NEU: Spieler wurde noch nicht freigeschaltet.</li>
+              </ul>
+            </caption>
+            <thead class="bg-secondary">
               <tr>
-                <th class="myHeader">Rang</th>
-                <th class="myHeader">Name</th>
-                <th class="myHeader">anstehende Forderung</th>
+                <th>Rang</th>
+                <th>Name</th>
+                <th>anstehende Forderung</th>
               </tr>
             </thead>
             <tbody>
@@ -58,9 +64,6 @@
           </table>
         </div>
       </div>
-      <small>*OR = Ohne Rang: Dieser Spieler darf einen beliebigen Spieler fordern.</small>
-      <br>
-      <small>*NEU = Dieser Spieler hat sich kürzlich erst registriert und muss erst freigeschaltet werden.</small>
     </div>
   </div>
 </div>
