--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -11,10 +11,10 @@
     <div class="col-md-8 col-lg-6">
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a href="#table" class="nav-link active bg-success" data-toggle="tab" (click)="onChangeToMale()">Gesamt</a>
+          <a href="#table" class="nav-link active text-dark bg-light" data-toggle="tab" (click)="onChangeToMale()">Gesamt</a>
         </li>
         <li class="nav-item">
-          <a href="#table" class="nav-link" data-toggle="tab" (click)="onChangeToFemale()">Damen</a>
+          <a href="#table" class="nav-link text-dark bg-light" data-toggle="tab" (click)="onChangeToFemale()">Damen</a>
         </li>
       </ul>
     </div>
