--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -4,10 +4,10 @@
       <div>
         <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a href="#home" class="nav-link active" data-toggle="tab">Home</a>
+            <a href="#home" class="nav-link active text-dark bg-light" data-toggle="tab">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#rules" class="nav-link" data-toggle="tab">Regeln</a>
+            <a href="#rules" class="nav-link text-dark bg-light" data-toggle="tab">Regeln</a>
           </li>
         </ul>
         <br>
