--- a/src/app/challenge/challenge/opponent-detail/opponent-detail.component.html
+++ b/src/app/challenge/challenge/opponent-detail/opponent-detail.component.html
@@ -18,8 +18,8 @@
         <div class="card-body text-center">
           <p>{{ opponent.firstName }} wird zur Zeit nicht gefordert.</p>
           <p>
-            <button class="btn btn-outline-danger btn-sm" data-toggle="modal" [attr.data-target]="'#Modal' + index" style="cursor: pointer;">
-              {{ opponent.firstName | uppercase }} HERAUSFORDERN
+            <button class="btn btn-success" data-toggle="modal" [attr.data-target]="'#Modal' + index" style="cursor: pointer;">
+              {{ opponent.firstName | uppercase }} FORDERN
             </button>
           </p>
         </div>
