--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -57,7 +57,7 @@
       <ng-template #showLogin>
         <li class="nav-item">
           <a class="nav-link" routerLink="signin">
-            <button class="btn btn-danger">
+            <button class="btn btn-primary">
               <i class="fa fa-sign-in"></i> Anmelden</button>
           </a>
         </li>
