--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container py-3">
+<div class="container py-3 with-background">
   <div class="row justify-content-center">
     <div class="col-md-10 col-lg-8">
       <div>
@@ -16,7 +16,7 @@
       <div class="tab-content">
 
         <div class="tab-pane text-center active fade in show" id="home">
-          <div class="home-background">
+          
             <div class="home-heading">Badminton Rangliste</div>
             <div class="home-content">
               Diese Rangliste hat
@@ -24,10 +24,10 @@
               <br>Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht
               jedoch für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
             </div>
-          </div>
+          
         </div>
 
-        <div class="tab-pane fade" id="rules">
+        <div class="tab-pane fade rules-start" id="rules">
           <h4 class="text-center">Regeln</h4>
           <br>
           <p>
