--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="container py-3 with-background">
+
   <div class="row justify-content-center">
+
     <div class="col-md-10 col-lg-8">
-      <div>
+      <!-- <div>
         <ul class="nav nav-tabs">
           <li class="nav-item">
             <a href="#home" class="nav-link active text-dark bg-light" data-toggle="tab">Home</a>
@@ -11,20 +13,29 @@
           </li>
         </ul>
         <br>
+      </div> -->
+      <div class="row justify-content-center bg-light">
+        <div class="col-auto mb-3">
+          <div class="nav nav-pills bg-light" id="tab" role="tablist" aria-orientation="horizontal">
+            <a class="nav-link active" id="active-tab" data-toggle="pill" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+            <a class="nav-link" id="completed-tab" data-toggle="pill" href="#rules" role="tab" aria-controls="rules" aria-selected="true">Regeln</a>
+          </div>
+        </div>
       </div>
+
 
       <div class="tab-content">
 
         <div class="tab-pane text-center active fade in show" id="home">
-          
-            <div class="home-heading">Badminton Rangliste</div>
-            <div class="home-content">
-              Diese Rangliste hat
-              <span class="font-weight-bold">keine Auswirkung</span> auf die Besetzung der Mannschaften!
-              <br>Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht
-              jedoch für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
-            </div>
-          
+
+          <div class="home-heading">Badminton Rangliste</div>
+          <div class="home-content">
+            Diese Rangliste hat
+            <span class="font-weight-bold">keine Auswirkung</span> auf die Besetzung der Mannschaften!
+            <br>Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht
+            jedoch für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
+          </div>
+
         </div>
 
         <div class="tab-pane fade rules-start" id="rules">
