--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -7,7 +7,7 @@
     </div>
   </div> -->
 
-  <div class="row justify-content-center">
+  <!-- <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6">
       <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -17,6 +17,17 @@
           <a href="#table" class="nav-link text-dark bg-light" data-toggle="tab" (click)="onChangeToFemale()">Damen</a>
         </li>
       </ul>
+    </div>
+  </div> -->
+
+  <div class="row justify-content-center bg-light">
+    <div class="col-md-8 col-lg-6">
+      <div class="nav nav-pills bg-light" id="tab" role="tablist" aria-orientation="horizontal">
+        <a class="nav-link active" id="all" data-toggle="pill" href="#table" role="tab" aria-controls="table" aria-selected="true"
+          (click)="onChangeToMale()">Rangliste Gesamt</a>
+        <a class="nav-link" id="ladies" data-toggle="pill" href="#table" role="tab" aria-controls="table" aria-selected="true"
+          (click)="onChangeToFemale()">Rangliste Damen</a>
+      </div>
     </div>
   </div>
 
