--- a/src/app/challenge/active-challenges/active-challenges.component.html
+++ b/src/app/challenge/active-challenges/active-challenges.component.html
@@ -5,7 +5,7 @@
     <!-- Side-Navigation -->
     <div class="col-auto mb-3">
       <div class="nav nav-pills bg-light" id="tab" role="tablist" aria-orientation="horizontal">
-        <a class="nav-link active" id="active-tab" data-toggle="pill" href="#active" role="tab" aria-controls="active" aria-selected="true">Aktuell</a>
+        <a class="nav-link active" id="active-tab" data-toggle="pill" href="#active" role="tab" aria-controls="active" aria-selected="true">Offen</a>
         <a class="nav-link" id="completed-tab" data-toggle="pill" href="#completed" role="tab" aria-controls="completed" aria-selected="true">Abgeschlossen</a>
       </div>
     </div>
