--- a/src/app/challenge/challenge/challenge.component.html
+++ b/src/app/challenge/challenge/challenge.component.html
@@ -21,6 +21,10 @@
         </div>
       </div>
 
+      <div class="pt-2">
+        <button type="button" class="btn btn-secondary" (click)="onNavigateBack()">zurück</button>
+      </div>
+
     </div>
   </div>
 </div>
