--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -15,7 +15,7 @@ a {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  height: 90vh;
+  height: 85vh;
 }
 
 .home-heading {
@@ -45,4 +45,11 @@ a {
     rgba(255, 255, 255, 0.5)
   );
   padding: 15px;
+}
+
+.background-transparent {
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.5)
+  );
 }
